--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Nancy Jennifer Ng</title>
 		<link rel = "text" type = "text/css" href= "style.css"/>
 		<link rel = "text" type = "text/js" href= "index.js"/>
 		<meta charset="utf-8" />
