--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 								<p>A stocks educational tool, that helps users make their decision on what stock to invest in.<br>I am responsible for leading the design team for the app welcome screen, sign up, log in, and dashboard navigration drawer.<p>
 								<u>Technologies used:</u> React-Native and expo-cli, Javascript for frontend design. Python and flask for the backend team.</p>
 								<h3> Toilocator | December 2020-Present</h3>
-								<p>A maps app tool to help users find the nearest public bathroom from their location.</p>
+								<p>A maps app tool to help users find the nearest public bathroom from their location.<br>
+								Responsible for creating permissions settings, markers for nearest bathroom, search bar, and routes to bathroom of choice</p>
 								<u>Technologies used:</u> Swift to implement the front end, and Swift and Firebase to implement the backend</p>
 							</article>
 
