--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<p>My name is Nancy Jennifer Ng. I am a 2nd-degree student, majoring in Computer Science.I graduated from the University at Buffalo with a Bachelor of Science degree in Biology on May 2018.I am Hunter College's Secretary/Lead of Google Developer Student Club</p>
-								<p>I love to code, learn new things on how to improve my coding skills, cook, bake, attending hackathons with my friends, and bullet journaling.I also like to watch Korean dramas, thriller shows/movies, and some anime.My favorite Korean Drama is Guardian: The Lonely and Great God. My favorite anime is Demon Slayer.</p>
-								<p>My favorite dish to cook is soups, such as kimchi jjigae- a Korean kimchi stew with tofu and lots of veggies or jjuk- a rice porridge with lots of ginger and your meat of choice. My favorite thing to bake is bread, specifically cinnamon rolls. I love to drink coffee and matcha tea, so you'll always find me in a coffee shop.</p>
+								<p>I love to code, learn new things on how to improve my coding skills, cook, bake, working out, attending hackathons with my friends, listening to podcasts,and bullet journaling.I also like to watch Korean dramas, thriller shows/movies, and some anime.My favorite Korean Drama is Guardian: The Lonely and Great God. My favorite anime is Demon Slayer.</p>
+								<p>My favorite dish to cook is soups, such as kimchi jjigae- a Korean kimchi stew with tofu and lots of veggies or congee- a rice porridge with lots of ginger and your meat of choice. My favorite thing to bake is bread, specifically cinnamon rolls. I love to drink coffee and matcha tea, so you'll always find me in a coffee shop with my cold brew or brewed coffee with oat milk. My comfort food is pho and biang biang noodles. </p>
 							</article>
 
 						<!-- Work -->
