--- a/index.html
+++ b/index.html
@@ -51,42 +51,52 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<p>My name is Nancy Jennifer Ng. I am a 2nd-degree student, majoring in Computer Science.I graduated from the University at Buffalo with a Bachelor of Science degree in Biology on May 2018.I am Hunter College's Secretary/Lead of Google Developer Student Club</p>
-								<p>I love to code, learn new things on how to improve my coding skills, cook, bake, working out, attending hackathons with my friends, listening to podcasts,and bullet journaling.I also like to watch Korean dramas, thriller shows/movies, and some anime.My favorite Korean Drama is Guardian: The Lonely and Great God. My favorite anime is Demon Slayer.</p>
-								<p>My favorite dish to cook is soups, such as kimchi jjigae- a Korean kimchi stew with tofu and lots of veggies or congee- a rice porridge with lots of ginger and your meat of choice. My favorite thing to bake is bread, specifically cinnamon rolls. I love to drink coffee and matcha tea, so you'll always find me in a coffee shop with my cold brew or brewed coffee with oat milk. My comfort food is pho and biang biang noodles. </p>
+								<p>My name is Nancy Jennifer Ng. I am a 2nd-degree student, majoring in Computer Science.I graduated from the University at Buffalo with a Bachelor of Science in Biology on May 2018.</p>
+								<p>Outside of university, I enjoy bullet journaling, working out and listening to podcasts, playing video games with my buds, drinking coffee or matcha tea lattes, eating spicy noodles, and late night discord chats</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Projects</h2>
+								<h1>Projects</h1>
+								<h2><a href="https://github.com/njng2">GitHub</a></h2>
 								<h3> StonkStache | August 2020-Present</h3> 
-								<p>A stocks educational tool, that helps users make their decision on what stock to invest in.<br>I am responsible for leading the design team for the app welcome screen, sign up, log in, and dashboard navigration drawer.<p>
-								<u>Technologies used:</u> React-Native and expo-cli, Javascript for frontend design. Python and flask for the backend team.</p>
+								<li>A stocks educational tool, that helps users make their decision on what stock to invest in.</li>
+								<li>I am responsible for leading the design team for the app welcome screen, sign up, log in, and dashboard navigration drawer.</li>
+								<li><u>Technologies used:</u> React-Native and expo-cli, Javascript for frontend design. Python and flask for the backend team.</li>
+								<br>
 								<h3> Toilocator | December 2020-Present</h3>
-								<p>A maps app tool to help users find the nearest public bathroom from their location.<br>
-								Responsible for creating permissions settings, markers for nearest bathroom, search bar, and routes to bathroom of choice</p>
-								<u>Technologies used:</u> Swift to implement the front end, and Swift and Firebase to implement the backend</p>
+								<li>A maps app tool to help users find the nearest public bathroom from their location.</li>
+								<li>Responsible for creating permissions settings, markers for nearest bathroom, search bar, and routes to bathroom of choice</li>
+								
+								<li><u>Technologies used:</u> Swift to implement the front end, and Swift and Firebase to implement the backend</li>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">Socials</h2>
 								<h3>Stay in touch</h3>
-								<a href="https://dsc.community.dev/hunter-college/">Check out our DSC Chapter</a> <br>
-								<a href="https://github.com/njng2">Github Handle</a><br>
-								<a href="https://www.linkedin.com/in/nancyjng/">Linkedin</a>
+								<a href="https://dsc.community.dev/hunter-college/">Check out our DSC Chapter for future workshops to build your technical skills</a> <br>
+								<a href="https://www.linkedin.com/in/nancyjng/">Connect with me on LinkedIn</a>
 								<p></p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Experience</h2>
-								<h3>Hunter College- Undergraduate TA| New York, NY</h3>
+								<h3>Hunter College| New York, NY</h3>
+								<h4>Undergraduate TA-Programming in Python and C++ courses</h4>
 								<h4>February 2020-Present </h4>
 								<li>Leading drop-in tutoring sessions to help students with programming assignments and clarifying class
 								material</li><li>Working with course instructor to address re-grade requests</li><li>Assisting lab instructors during weekly recitation meetings to debug students’ code for lab assignments</li>
 								<li>Leading open lab sessions to work with students to debug their code for class projects and homework
-								assignments</li>
+								assignments</li><br>
+
+								<h3>Hunter College-Google's Developer Student Club| New York,NY</h3>
+								<h4>Volunteer- Secretary/Lead</h4>
+								<h4>August 2020-Present</h4>
+								<li>Coordinating with student government to discuss club budget spending</li>
+								<li>Responsible for organizing e-board meetings with other e-board members of computer science
+								clubs to discuss scheduling of club events</li>
 								
 							</article>
 
