--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<p>My name is Nancy Jennifer Ng. I am a 2nd-degree student, majoring in Computer Science.I graduated from the University at Buffalo with a Bachelor of Science in Biology on May 2018.</p>
+								<p>My name is Nancy Jennifer Ng. I am a 2nd-degree student,currently majoring in Computer Science.I graduated from the University at Buffalo with a Bachelor of Science in Biology on May 2018.</p>
 								<p>Outside of university, I enjoy bullet journaling, working out and listening to podcasts, playing video games with my buds, drinking coffee or matcha tea lattes, eating spicy noodles, and late night discord chats</p>
 							</article>
 
