grammar changes again again

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<h2><a href="https://github.com/njng2">GitHub</a></h2>
 								<h3> StonkStache | August 2020-Present</h3> 
 								<li>A stocks educational tool, that helps users make their decision on what stock to invest in.</li>
-								<li>I am responsible for leading the design team for the app welcome screen, sign up, log in, and dashboard navigration drawer.</li>
+								<li>Responsible for leading the design team for the app welcome screen, sign up, log in, and dashboard navigration drawer.</li>
 								<li><u>Technologies used:</u> React-Native and expo-cli, Javascript for frontend design. Python and flask for the backend team.</li>
 								<br>
 								<h3> Toilocator | December 2020-Present</h3>
