--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Projects</a></li>
-								<li><a href="#contact">Experience</a></li>
-								<li><a href="#about">Socials</a></li>
+								<li><a href="#experience">Experience</a></li>
+								<li><a href="#social">Socials</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -72,7 +72,7 @@
 							</article>
 
 						<!-- About -->
-							<article id="about">
+							<article id="social">
 								<h2 class="major">Socials</h2>
 								<h3>Stay in touch</h3>
 								<a href="https://dsc.community.dev/hunter-college/">Check out our DSC Chapter for future workshops to build your technical skills</a> <br>
@@ -81,7 +81,7 @@
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
+							<article id="experience">
 								<h2 class="major">Experience</h2>
 								<h3>Hunter College| New York, NY</h3>
 								<h4>Undergraduate TA-Programming in Python and C++ courses</h4>
