--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Projects</a></li>
+								<li><a href="#projects">Projects</a></li>
 								<li><a href="#experience">Experience</a></li>
 								<li><a href="#social">Socials</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -56,7 +56,7 @@
 							</article>
 
 						<!-- Work -->
-							<article id="work">
+							<article id="projects">
 								<h1>Projects</h1>
 								<h2><a href="https://github.com/njng2">GitHub</a></h2>
 								<h3> StonkStache | August 2020-Present</h3> 
