--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 <html>
 	<head>
 		<title>Nancy Jennifer Ng</title>
-		<link rel = "text" type = "text/css" href= "style.css"/>
-		<link rel = "text" type = "text/js" href= "index.js"/>
+		<!-- <link rel = "text"  href= "style.css"/> -->
+		 <!-- <script src="assets/js/carousel.js"></script> -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="style.css" />
+		
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -26,13 +28,16 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Hello friends. Welcome to my portfolio.</h1>
-								<p>I am an aspiring software developer/engineer</p>
-									
-								  
-								<!--<h1>Hi friend!</h1>-->
-								<!-- <p>Welcome to my portfolio.</p> -->
-							</div>
+								<h2>Welcome to my portfolio,
+								<!-- <p>Welcome</p> -->
+								<div class="dropping-texts">
+									<div>Friends!</div>
+									<div>Developers!</div>
+									<div>Engineers!</div>
+									<div>Everyone!</div>
+								  </div>
+								</h2>
+							</div>  <!---inner drawer--->
 						</div>
 						<nav>
 							<ul>
@@ -360,6 +365,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			
+			
 	</body>
 </html>
