--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="stash.css" />
+		<script src="app.js"></script>
 		
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -28,15 +29,18 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h2>Welcome to my portfolio,
-								<!-- <p>Welcome</p> -->
-								<div class="dropping-texts">
-									<div>Friends!</div>
-									<div>Developers!</div>
-									<div>Engineers!</div>
-									<div>Everyone!</div>
-								  </div>
-								</h2>
+								<h2>Welcome to my portfolio,</h2>
+									<div class="text">
+										<h2>
+										<span class="word ocean">friends!</span>
+										<span class="word pinky">coders!</span>
+										<span class="word teal">developers!</span>
+										<span class="word green">engineers!</span>
+										<span class="word purple">everyone!</span>
+									</h2>
+									</div>
+									<script src="app.js"></script>
+							
 							</div>  <!---inner drawer--->
 						</div>
 						<nav>
@@ -55,8 +59,9 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
+								<h2>Intro</h2>
 								<p>My name is Nancy Jennifer Ng. I am a 2nd-degree student,currently majoring in Computer Science.I graduated from the University at Buffalo with a Bachelor of Science in Biology on May 2018.</p>
+								<p> </p>
 								<p>Outside of university, I enjoy bullet journaling, working out and listening to podcasts, playing video games with my buds, drinking coffee or matcha tea lattes, eating spicy noodles, and late night discord chats</p>
 							</article>
 
