--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 									</h2>
 									</div>
 									<script src="app.js"></script>
+									<br>
+								<!-- <h3>I am an aspiring software developer/engineer</h3> -->
 							
 							</div>  <!---inner drawer--->
 						</div>
@@ -74,11 +76,16 @@
 								<li>Leading the design team for the app welcome screen, sign up, log in, and dashboard navigration drawer.</li>
 								<li><u>Technologies used:</u> React-Native and expo-cli, Javascript for frontend design. Python and flask for the backend team.</li>
 								<br>
-								<h3> Toilocator | December 2020-Present</h3>
+								<h3> Toilecator | December 2020-February 2021</h3>
 								<li>A maps app tool to help users find the nearest public bathroom from their location.</li>
 								<li>Creating permissions settings, markers for nearest bathroom, search bar, and routes to bathroom of choice</li>
 								
 								<li><u>Technologies used:</u> Swift to implement the front end, and Swift and Firebase to implement the backend</li>
+
+								<h3>Tipper | December 2020</h3>
+								<li>An iOS Calculator app that helps users easily calculate the tip, based on percentages and adds tip to the total amount</li>
+								<li>Created Welcome screen and tip calculator</li>
+								<li><u>Technologies used:</u> Swift to implement frontend and backend</li>
 							</article>
 
 						<!-- About -->
