--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 								<li><u>Technologies used:</u> React-Native and expo-cli, Javascript for frontend design. Python and flask for the backend team.</li>
 								<br>
 								<h3> Toilecator | December 2020-February 2021</h3>
+								<a href = "https://github.com/njng2/winter-2021-codefest-submissions-the-three-quaranteers/blob/master/codefest/README.md">Click here to preview Toilecator</a>
 								<li>A maps app tool to help users find the nearest public bathroom from their location.</li>
 								<li>Creating permissions settings, markers for nearest bathroom, search bar, and routes to bathroom of choice</li>
 								
