--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								<h3> Toilecator | December 2020-February 2021</h3>
 								<a href = "https://github.com/njng2/winter-2021-codefest-submissions-the-three-quaranteers/blob/master/codefest/README.md">Click here to preview Toilecator</a>
 								<li>A maps app tool to help users find the nearest public bathroom from their location.</li>
-								<li>Creating permissions settings, markers for nearest bathroom, search bar, and routes to bathroom of choice</li>
+								<li>Created permissions settings, markers for nearest bathroom, search bar, and routes to bathroom of choice</li>
 								
 								<li><u>Technologies used:</u> Swift to implement the front end, and Swift and Firebase to implement the backend</li>
 								
