changes to stonks

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								<h3> StonkStache | August 2020-Present</h3> 
 								<li>A stocks educational tool, that helps users make their decision on what stock to invest in.</li>
 								<li>Leading the design team for the app welcome screen, sign up, log in, and dashboard navigration drawer.</li>
-								<li><u>Technologies used:</u> React-Native and expo-cli, Javascript for frontend design. Python and flask for the backend team.</li>
+								<li><u>Technologies used:</u>React JS, JavaScript, HTML and CSS for the frontend design and python and flask for the backend team</li>
 								<br>
 								<h3> Toilecator | December 2020-February 2021</h3>
 								<a href = "https://github.com/njng2/winter-2021-codefest-submissions-the-three-quaranteers/blob/master/codefest/README.md">Click here to preview Toilecator</a>
