--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								<li>Leading the design team for the app welcome screen, sign up, log in, and dashboard navigration drawer.</li>
 								<li><u>Technologies used:</u>React JS, JavaScript, HTML and CSS for the frontend design and python and flask for the backend team</li>
 								<br>
-								<h3> Toilecator | December 2020-February 2021</h3>
+								<h3> Toilecator | CodeFest| December 2020-February 2021</h3>
 								<a href = "https://github.com/njng2/winter-2021-codefest-submissions-the-three-quaranteers/blob/master/codefest/README.md">Click here to preview Toilecator</a>
 								<li>A maps app tool to help users find the nearest public bathroom from their location.</li>
 								<li>Created permissions settings, markers for nearest bathroom, search bar, and routes to bathroom of choice</li>
@@ -84,7 +84,7 @@
 								<li><u>Technologies used:</u> Swift to implement the front end, and Swift and Firebase to implement the backend</li>
 								
 								<br>
-								<h3>Tipper | December 2020</h3>
+								<h3>Tipper | CodePath| December 2020</h3>
 								<li>An iOS Calculator app that helps users easily calculate the tip, based on percentages and adds tip to the total amount</li>
 								<li>Created Welcome screen and tip calculator</li>
 								<li><u>Technologies used:</u> Swift to implement frontend and backend</li>
