--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<article id="intro">
 				<h2>Intro</h2>
 				<p>My name is Nancy Jennifer Ng. I am pursuing my 2nd degree in Computer Science. I
-					graduated in May 2018 with my first Bachelors of Science in Biology from the University at Buffalo</p>
+					graduated in May 2018 with my first bachelors in Biology from the University at Buffalo</p>
 				<p> </p>
 				<p>Outside of university, I enjoy bullet journaling, playing(practicing) guitar and piano, working out
 					and listening to podcasts, playing video games with my buds, drinking coffee or matcha tea lattes,
