--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<!-- Intro -->
 			<article id="intro">
 				<h2>Intro</h2>
-				<p>My name is Nancy Jennifer Ng. I am pursuing my 2nd degree in Computer Science. I
+				<p>My name is Nancy Jennifer Ng. I am pursuing my 2nd Bachelors in Computer Science. I
 					graduated in May 2018 with my first bachelors in Biology from the University at Buffalo</p>
 				<p> </p>
 				<p>Outside of university, I enjoy bullet journaling, playing(practicing) guitar and piano, working out
@@ -79,12 +79,26 @@
 			<article id="projects">
 				<h1>Projects</h1>
 				<h2><a href="https://github.com/njng2">GitHub</a></h2>
+			
+				<h3> RocketCoin | StonyBrook University Hacks| September 2021 </h3>
+				<a
+				href="https://github.com/njng2/rocketcoin"> Project Repository</a>
+				<br>
+				<a
+				href="https://devpost.com/software/rocketcoin"> See our DevPost here</a>
+					<li>A budget management app for users to set a weekly budget and to keep track of any weekly transactions.</li>
+				<li>Designed app logo, app home screen and budget transaction page with Flutter/Dart to match prototype
+					on Figma.</li>
+				<li>Connected budget transaction page with MongoDB, to store live transactions.</li>
+				<br>
 
-				<h3> MealSnap | CodePath | March 2021- May 2021</h3>
+				<h3> MealSnap | CodePath | February 2021- May 2021</h3>
 				<a
 				href="https://github.com/Meal-Snap/MealSnap"> Project Repository</a>
-				<li> A social media app for users to share recipes of home cooked meals, based on their dietary preferences, allergies, or type of cuisine </li>
-				<li> Implemented recipe feed, grid views, and data models with Back4App’s Parse, Swift, AlamoFireImage for image processing, and Cocoapods for pod installing.</li>
+				<li> A social media app for users to share recipes of home cooked meals, based on their dietary
+					preferences, allergies, or type of cuisine</li>
+				<li>Implemented recipe feed, grid views, and data models with Back4App’s Parse, Swift, AlamoFireImage
+					for image processing, and Cocoapods for pod installing.</li>
 				
 				<br>
 
@@ -115,11 +129,20 @@
 			<!-- Contact -->
 			<article id="experience">
 				<h2 class="major">Experience</h2>
+				<h3>PruTech | New York, NY</h3>
+				<h4>Software Engineer Intern</h4>
+				<h4>October 2021- Present</h4>
+			
+
+				<br>
+
+
+
 				<h3>CUNY Recovery Corps| Hunter College| New York, NY</h3>
 				<h4>Autograder Software Developer Intern</h4>
 				<h4>July 2021- August 2021 </h4>
 				<li>Designed assignments and projects for programming in python, programming in C++, Data structures, and Data science courses</li>
-				<li>Implemented test cases using Gradescope utils, Python and C++ that automatically grades students’ uploaded assignments.</li>
+				<li>Refined Python and C++ auto grader scripts and unit tests with Gradescope Utils.</li>
 				<br>
 
 
@@ -134,6 +157,11 @@
 				<h4>Volunteer- Secretary/Lead</h4>
 				<h4>August 2020-Present</h4>
 				<li>Organizing meetings with executive board, core team and 80+ club members to discuss scheduling of future workshops to improve student’s technical and professional skills by hosting resume workshops, behavioral/technical interview workshops, etc. </li>
+
+				<br>
+				<h4>Volunteer- Vice Presisent/Lead</h4>
+				<h4>September 2021- Present</h4>
+				<li>Organizing meetings with core team and 80+ club members to discuss scheduling of future workshops to improve student’s technical and professional skills by hosting resume workshops, behavioral/technical interview workshops, etc. </li>
 
 			</article>
 
