--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
 				<h3>PruTech | New York, NY</h3>
 				<h4>Software Engineer Intern</h4>
 				<h4>October 2021- Present</h4>
+				<li>Contributing to an 8-week long group project to develop a full stack application with Angular, .NET, and C#,
+					and storing user data with SQLite</li>
+				<li>Using waterfall development to discuss project workflow and weekly sprint plan.</li>
 			
 
 				<br>
