added more to experience

--- a/index.html
+++ b/index.html
@@ -106,17 +106,19 @@
 				<h3> Toilecator | CodeFest| December 2020-February 2021</h3>
 				<a
 					href="https://github.com/njng2/winter-2021-codefest-submissions-the-three-quaranteers/blob/master/codefest/README.md"> Project Repository</a>
-				<li> Maps app to help users choose a public restroom from their current location, based on cleanliness, accessibility, customer only or single/multi-stalled bathrooms</li>
-				<li> Created permission settings and markers for nearest bathroom and routes to bathroom with Swift and Firebase</li>
+				<li> A maps app to help users choose a public restroom from their current location, based on cleanliness,
+					accessibility, customer only or single/multi-stalled bathrooms and post reviews on the restroom</li>
+				<li> Worked on authentication to enable users to log in and visualize routes to the nearest bathroom and
+					map markers with Swift, Firebase and Google Maps SDK pods.</li>
 
-				<li> Utilized Firebase/Cloud Firestore to store real time data to see constant updated review</li>
+				<li>Integrated Firebase/Cloud Firestore to store real time data on updated reviews on the bathroom</li>
 
 				<br>
 
 				
 			</article>
 
-			<!-- About -->
+			<!-- Links -->
 			<article id="social">
 				<h2 class="major">Socials</h2>
 				<h3>Stay in touch</h3>
@@ -126,7 +128,7 @@
 				<p></p>
 			</article>
 
-			<!-- Contact -->
+			<!-- Experience -->
 			<article id="experience">
 				<h2 class="major">Experience</h2>
 				<h3>PruTech | New York, NY</h3>
